added getRecipeFromMistral to ingredients.jsx file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
     "cra-template": "1.2.0",
+    "huggingface": "^1.4.0",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
