--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "uuid": "^11.0.3",
     "web-vitals": "^4.2.4"
   },
